Update 'w0it7j7pd-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:411356fc1a6becc27e10e2e95512c27264b8bc2d@sha256:16270af90c4ec3bf25053dfb10f08c38ab7a37d7728da5caa657f7fe204086fb

--- a/components/w0it7j7pd-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/w0it7j7pd-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: w0it7j7pd-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:411356fc1a6becc27e10e2e95512c27264b8bc2d@sha256:16270af90c4ec3bf25053dfb10f08c38ab7a37d7728da5caa657f7fe204086fb
+          name: container-image
